@@ -1123,6 +1123,8 @@ Titles and Help for the System Fields
 
     <ep:phrase id="Plugin/Screen/EPrint/Details:title">Details</ep:phrase>
 
+    <ep:phrase id="Plugin/Screen/EPrint/Staff/Details:title">Details</ep:phrase>
+
     <ep:phrase id="Plugin/Screen/EPrint/Actions:title">Actions</ep:phrase>
 
     <ep:phrase id="Plugin/Screen/EPrint/Staff/Actions:title">Actions</ep:phrase>
