@@ -4341,3 +4341,11 @@ PACKAGE: 2.2.99.2
 2006-09-20 cjg
  * Phrases now work from a directory of phrase files, not a single file.
  * Broke up phrases.xml for archive phrases.
+
+2006-09-20 cjg
+ * Details now has 2 versions staff/owner
+ * Each version links into the edit pages if allowed
+ * Fixed bug in the problems warnings which jumped always into owner
+    edit rather than the appropriate type of edit.
+ * Convert was dieing if it could not work out the mime type of a file. Now
+    it just returns undef.
